dev-vis-backend-lifecycle: fix mismatch in occurrence instances returned with the highest order